tests/paczka1/small_fuzzy/48319940.err
Error in line 4: kmC S283 8,2
Error in line 6: kmC A440 20,7
Error in line 7: kmC S651 17,7
Error in line 12: 5ja A960 79,8
Error in line 13: 5ja S283 86,2
